--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoQuiz</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="name">
@@ -63,8 +63,8 @@
             <button class="quit">Quit</button>
         </div>
     </div>
-    <script src="/questions.js"></script>
-    <script src="/script.js"></script>
+    <script src="questions.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
